@@ -96,6 +96,7 @@ typedef enum
   GEARMAN_IGNORE_PACKET,
   GEARMAN_UNKNOWN_OPTION,
   GEARMAN_TIMEOUT,
+  GEARMAN_ARGUMENT_TOO_LARGE,
   GEARMAN_MAX_RETURN /* Always add new error code before */
 } gearman_return_t;
 
